# quadruped_mb_controllers

./: .gitignore  .gitmodules  README.md
anymal_c_kin_dyn/: CMakeLists.txt  package.xml
anymal_c_kin_dyn/launch/: anymal_c_kin_dyn.launch
anymal_c_kin_dyn/src/: anymal_c_kin_dyn_node.cpp
anymal_c_simple_robcogen/: CMakeLists.txt  package.xml
anymal_c_simple_robcogen/config/: anymal_c_simple.dtdsl  anymal_c_simple.kindsl
inverse_dynamic_control/: CMakeLists.txt  package.xml
inverse_dynamic_control/src/: inverse_dynamic_control.cpp
tsid_examples/ex_0/: ex_0_ur5_joint_space_control.py
tsid_examples/my_cpp_example/: a.out  ex_0.cpp  ex_1.cpp  producer_consumer.cpp
tsid_examples/my_cpp_example/tsid_formulation_example/: CMakeLists.txt
tsid_examples/my_cpp_example/tsid_formulation_example/src/: tsid_formulation.cpp
tsid_examples/quadruped_example/: demo_quadruped.py
wsmemmo_pinocchio-master/: arm3d.py  arm6dframe.py  bip6d.py
wsmemmo_pinocchio-master/.ipynb_checkpoints/: 1. Optimize the effector of a manipulator robot-checkpoint.ipynb
